--- a/packages/design/src/timings.css
+++ b/packages/design/src/timings.css
@@ -1,4 +1,7 @@
 :root {
   --timing-quick: 100ms;
   --timing-base: 200ms;
+  --timing-slow: 500ms;
+  --timing-slower: 1s;
+  --timing-slowest: 2s;
 }
