Using real version of temporal proposal. Same width time pickers.
Made the TimePickers the same width when using different sizes.

--- a/packages/components/src/TimePicker/TimePicker.css
+++ b/packages/components/src/TimePicker/TimePicker.css
@@ -12,6 +12,7 @@
   position: relative;
   width: 100%;
   height: inherit;
+  box-sizing: border-box;
   padding-left: var(--inset);
   padding-right: var(--inset);
   border: var(--border-base) solid var(--color-grey--lighter);
