Align button to the middle instead of baseline

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -8,6 +8,7 @@
   color: var(--color, transparent);
   -webkit-font-smoothing: antialiased;
   text-decoration: none;
+  vertical-align: middle;
   background-color: var(--bgColor, transparent);
   cursor: pointer;
   transition: all var(--timing-base);
