--- a/packages/components/src/Icon/Icon.css
+++ b/packages/components/src/Icon/Icon.css
@@ -13,7 +13,7 @@
   /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
   font-family: "jobbericons" !important;
 
-  font-size: calc(var(--base-unit) * 1.5);
+  font-size: var(--size);
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
