--- a/packages/components/src/Menu/Menu.css
+++ b/packages/components/src/Menu/Menu.css
@@ -11,7 +11,7 @@
   position: absolute;
   top: 100%;
   right: 0;
-  z-index: 5; /* Change this */
+  z-index: 6; /* Change this */
   width: calc(var(--base-unit) * 12.5);
   box-shadow: var(--shadow-base);
   margin-top: var(--space-smallest);
@@ -58,4 +58,13 @@
 
 .icon {
   margin-right: var(--space-base);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5; /* Change this */
 }
