--- a/packages/design/src/elevations.css
+++ b/packages/design/src/elevations.css
@@ -1,4 +1,5 @@
 :root {
+  --elevation-menu: 6;
   /**
    * Modal has this much z-index to overcome docz z-index. This can be lowered
    * once we create our own docz theme
