--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -6,8 +6,8 @@
   --field-border-color: var(--color-grey--lighter);
   --field-background-color: var(--color-white);
 
-  --field-padding-top: calc(var(--space-base) - var(--space-smallest));
-  --field-padding-bottom: calc(var(--space-base) - var(--space-smallest));
+  --field-padding-top: calc(var(--space-base) - var(--space-smaller));
+  --field-padding-bottom: calc(var(--space-base) - var(--space-smaller));
   --field-padding-left: var(--space-base);
   --field-padding-right: var(--space-base);
   --field-height: var(--space-largest);
@@ -50,6 +50,10 @@ textarea.formField {
   height: auto;
   min-height: calc(var(--field-height) * 2);
   resize: vertical;
+}
+
+select.formField {
+  padding-right: calc(var(--field-padding-right) + var(--space-large));
 }
 
 .formField:focus {
@@ -157,4 +161,13 @@ textarea.formField {
     (var(--base-unit) * var(--formField-maxLength)) + var(--field-padding-left) +
       var(--field-padding-right)
   );
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  right: var(--field-padding-right);
+  color: var(--color-greyBlue);
+  pointer-events: none;
+  transform: translateY(-50%);
 }
