Some tweaks to the Card component.
`width: 100%` needed to make cards all the same width when they have different text while in a flex row/column.

Added a param for the onClick event to the Card. I needed to do a preventDefault on the onClick of the Card I'm working with, but TypeScript complains because the types don't match. ( `() => void` vs. `(e: MouseEvent<HTMLElement>) => void`);

--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -9,6 +9,7 @@
 
 .card {
   display: block;
+  width: 100%;
   padding: var(--card--base-padding);
   border: var(--border-base) solid var(--card--border-color);
   border-radius: var(--radius-base);
