--- a/packages/components/src/Typography/css/FontSizes.css
+++ b/packages/components/src/Typography/css/FontSizes.css
@@ -1,38 +1,38 @@
 .extravagant {
-  --font-size: var(--fontSize-extravagant);
+  font-size: var(--typography--fontSize-extravagant);
 }
 
 .jumbo {
-  --font-size: var(--fontSize-jumbo);
-  --line-height: var(--lineHeight-large);
+  font-size: var(--typography--fontSize-jumbo);
+  line-height: var(--typography--lineHeight-large);
 }
 
 .largest {
-  --font-size: var(--fontSize-largest);
-  --line-height: var(--lineHeight-large);
+  font-size: var(--typography--fontSize-largest);
+  line-height: var(--typography--lineHeight-large);
 }
 
 .larger {
-  --font-size: var(--fontSize-larger);
-  --line-height: var(--lineHeight-tight);
+  font-size: var(--typography--fontSize-larger);
+  line-height: var(--typography--lineHeight-tight);
 }
 
 .large {
-  --font-size: var(--fontSize-large);
-  --line-height: var(--lineHeight-tightest);
+  font-size: var(--typography--fontSize-large);
+  line-height: var(--typography--lineHeight-tightest);
 }
 
 .base {
-  --font-size: var(--fontSize-base);
-  --line-height: var(--lineHeight-base);
+  font-size: var(--typography--fontSize-base);
+  line-height: var(--typography--lineHeight-base);
 }
 
 .small {
-  --font-size: var(--fontSize-small);
-  --line-height: var(--lineHeight-tighter);
+  font-size: var(--typography--fontSize-small);
+  line-height: var(--typography--lineHeight-tighter);
 }
 
 .smaller {
-  --font-size: var(--fontSize-smaller);
-  --line-height: var(--lineHeight-tight);
+  font-size: var(--typography--fontSize-smaller);
+  line-height: var(--typography--lineHeight-tight);
 }
