--- a/packages/components/src/Typography/css/Typography.css
+++ b/packages/components/src/Typography/css/Typography.css
@@ -1,33 +1,33 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:800,900|Source+Sans+Pro:400,400i,700,700i&display=swap");
 
+:root {
+  --typography--fontFamily-normal: "Source Sans Pro", Helvetica, Arial,
+    sans-serif;
+  --typography--fontFamily-display: "Poppins", Helvetica, Arial, sans-serif;
+
+  --typography--fontSize-extravagant: calc(var(--base-unit) * 3); /* 48 */
+  --typography--fontSize-jumbo: calc(var(--base-unit) * 2.25); /* 36 */
+  --typography--fontSize-largest: calc(var(--base-unit) * 1.5); /* 24 */
+  --typography--fontSize-larger: calc(var(--base-unit) * 1.25); /* 20 */
+  --typography--fontSize-large: calc(var(--base-unit) * 1.125); /* 18 */
+  --typography--fontSize-base: calc(var(--base-unit) * 1); /* 16 */
+  --typography--fontSize-small: calc(var(--base-unit) * 0.875); /* 14 */
+  --typography--fontSize-smaller: calc(var(--base-unit) * 0.75); /* 12 */
+
+  --typography--lineHeight-large: 1.34;
+  --typography--lineHeight-base: 1.25;
+  --typography--lineHeight-tight: 1.2;
+  --typography--lineHeight-tighter: 1.143;
+  --typography--lineHeight-tightest: 1.12;
+  --typography--lineHeight-miniscule: 1.08;
+}
+
 .base {
-  --fontFamily-normal: "Source Sans Pro", Helvetica, Arial, sans-serif;
-  --fontFamily-display: "Poppins", Helvetica, Arial, sans-serif;
-
-  --textColor: var(--color-blue);
-  --fontSize-unit: var(--base-unit);
-
-  --fontSize-extravagant: calc((var(--fontSize-unit)) * 3); /* 48 */
-  --fontSize-jumbo: calc((var(--fontSize-unit)) * 2.25); /* 36 */
-  --fontSize-largest: calc((var(--fontSize-unit)) * 1.5); /* 24 */
-  --fontSize-larger: calc((var(--fontSize-unit)) * 1.25); /* 20 */
-  --fontSize-large: calc((var(--fontSize-unit)) * 1.125); /* 18 */
-  --fontSize-base: calc((var(--fontSize-unit)) * 1); /* 16 */
-  --fontSize-small: calc((var(--fontSize-unit)) * 0.875); /* 14 */
-  --fontSize-smaller: calc((var(--fontSize-unit)) * 0.75); /* 12 */
-
-  --lineHeight-large: 1.34;
-  --lineHeight-base: 1.25;
-  --lineHeight-tight: 1.2;
-  --lineHeight-tighter: 1.143;
-  --lineHeight-tightest: 1.12;
-  --lineHeight-miniscule: 1.08;
-
   margin: 0;
   padding: 0;
-  color: var(--textColor);
-  font-family: var(--fontFamily-normal);
-  font-size: var(--font-size);
-  font-weight: var(--font-weight);
-  line-height: var(--line-height);
+  color: var(--color-blue);
+  font-family: var(--typography--fontFamily-normal);
+  font-size: var(--typography--fontSize-base);
+  font-weight: 400;
+  line-height: var(--typography--lineHeight-base);
 }
