--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -1,15 +1,29 @@
+:root {
+  --button--color-work: var(--color-green);
+  --button--color-work--hover: var(--color-green--dark);
+
+  --button--color-learning: var(--color-lightBlue);
+  --button--color-learning--hover: var(--color-lightBlue--dark);
+
+  --button--color-destructive: var(--color-red);
+  --button--color-destructive--hover: var(--color-red--dark);
+
+  --button--color-cancel: var(--color-greyBlue);
+  --button--color-disabled: var(--color-grey--lighter);
+}
+
 .button {
   display: inline-flex;
-  min-height: var(--height);
+  min-height: calc(var(--base-unit) * 2.25);
   box-sizing: border-box;
-  padding: var(--padding);
-  border: 1px solid var(--borderColor, transparent);
+  padding: var(--space-small) calc(var(--space-base) - 4px);
+  border: 1px solid transparent;
   border-radius: var(--radius-base);
-  color: var(--color, transparent);
+  color: transparent;
   -webkit-font-smoothing: antialiased;
   text-decoration: none;
   vertical-align: middle;
-  background-color: var(--bgColor, transparent);
+  background-color: transparent;
   cursor: pointer;
   transition: all var(--timing-base);
   appearance: none;
@@ -21,107 +35,105 @@
   outline-color: var(--color-outline);
 }
 
-/* Type */
-
-.primary {
-  --bgColor: var(--buttonColor);
-  --color: var(--color-white);
-  --loadingColor: var(--buttonColor--loading);
-  --hoverbgColor: var(--buttonColor--hover);
-}
-
-.primary:hover,
-.primary:focus {
-  background-color: var(--hoverbgColor);
-}
-
-.secondary {
-  --bgColor: transparent;
-  --color: var(--buttonColor);
-  --borderColor: var(--buttonColor);
-  --loadingColor: var(--buttonColor--loading2);
-}
-
-.secondary:hover,
-.secondary:focus {
-  filter: brightness(90%);
-}
-
-.tertiary {
-  --bgColor: transparent;
-  --color: var(--buttonColor);
-  --loadingColor: var(--buttonColor--loading2);
-}
-
-.tertiary:hover,
-.tertiary:focus {
-  background-color: var(--color-grey--lightest);
-}
-
 /* Variation */
 
 .work {
-  --buttonColor: var(--color-green);
-  --buttonColor--loading: var(--color-green--light);
-  --buttonColor--loading2: var(--color-green--lightest);
-  --buttonColor--hover: var(--color-green--dark);
+  border-color: var(--button--color-work);
+  color: var(--button--color-work);
+  background-color: var(--button--color-work);
+}
+
+.work:hover {
+  border-color: var(--button--color-work--hover);
+  background-color: var(--button--color-work--hover);
 }
 
 .learning {
-  --buttonColor: var(--color-lightBlue);
-  --buttonColor--loading: var(--color-lightBlue--light);
-  --buttonColor--loading2: var(--color-lightBlue--lightest);
-  --buttonColor--hover: var(--color-lightBlue--dark);
+  border-color: var(--button--color-learning);
+  background-color: var(--button--color-learning);
+}
+
+.learning:hover {
+  border-color: var(--button--color-learning--hover);
+  background-color: var(--button--color-learning--hover);
 }
 
 .destructive {
-  --buttonColor: var(--color-red);
-  --buttonColor--loading: var(--color-red--light);
-  --buttonColor--loading2: var(--color-red--lightest);
-  --buttonColor--hover: var(--color-red--dark);
+  border-color: var(--button--color-destructive);
+  background-color: var(--button--color-destructive);
+}
+
+.destructive:hover {
+  border-color: var(--button--color-destructive--hover);
+  background-color: var(--button--color-destructive--hover);
 }
 
 /* Cancel is special because, by defualt, it's styled as a secondary button */
 
 .cancel {
-  --bgColor: transparent;
-  --buttonColor: var(--color-greyBlue);
-  --buttonColor--loading: var(--color-greyBlue--lightest);
-  --borderColor: var(--color-greyBlue);
+  border-color: var(--button--color-cancel);
 }
 
 .cancel:focus,
 .cancel:hover {
-  filter: brightness(90%);
+  filter: brightness(80%);
+}
+
+/* Type */
+
+.primary {
+  color: var(--color-white);
+}
+
+.secondary {
+  background-color: transparent;
+}
+
+.secondary:hover,
+.secondary:focus {
+  background-color: transparent;
+  filter: brightness(80%);
+}
+
+.tertiary {
+  border-color: transparent;
+  background-color: transparent;
+}
+
+.tertiary:hover,
+.tertiary:focus {
+  border-color: transparent;
+  background-color: var(--color-grey--lightest);
 }
 
 /* Disabled */
 
-.disabled {
-  --buttonColor: var(--color-grey--lighter);
-  --buttonColor--hover: var(--color-grey--lighter);
+.disabled,
+.disabled:hover {
+  border-color: var(--button--color-disabled);
+  background-color: var(--button--color-disabled);
   cursor: not-allowed;
 }
 
 /* Sizes */
 
 .small {
-  --height: calc(var(--base-unit) * 1.5);
-  --padding: var(--space-smaller) var(--space-small);
+  height: calc(var(--base-unit) * 1.5);
+  padding: var(--space-smaller) var(--space-small);
 }
 
 .base {
-  --height: calc(var(--base-unit) * 2.25);
-  --padding: var(--space-small) calc(var(--space-base) - 4px);
+  height: calc(var(--base-unit) * 2.25);
+  padding: var(--space-small) calc(var(--space-base) - 4px);
 }
 
 .large {
-  --height: calc(var(--base-unit) * 3);
-  --padding: var(--space-small) var(--space-base);
+  height: calc(var(--base-unit) * 3);
+  padding: var(--space-small) var(--space-base);
 }
 
 .hasIcon {
-  --padding: var(--space-smaller) var(--space-base);
+  padding: var(--space-smaller) var(--space-base);
 }
 
 /* Icon */
@@ -143,25 +155,39 @@
 .loading {
   background-image: linear-gradient(
     135deg,
-    var(--loadingColor) 0%,
-    var(--loadingColor) 25%,
-    var(--bgColor) 25%,
-    var(--bgColor) 50%,
-    var(--loadingColor) 50%,
-    var(--loadingColor) 75%,
-    var(--bgColor) 75%,
-    var(--bgColor) 100%
+    rgba(0, 0, 0, 10%) 0%,
+    rgba(0, 0, 0, 10%) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(0, 0, 0, 10%) 50%,
+    rgba(0, 0, 0, 10%) 75%,
+    transparent 75%,
+    transparent 100%
   );
   background-size: var(--space-larger) var(--space-larger);
   pointer-events: none;
   cursor: not-allowed;
   animation-duration: var(--timing-slowest);
   animation-iteration-count: infinite;
-  animation-name: animate-stripes;
+  animation-name: animateStripes;
   animation-timing-function: linear;
 }
 
-@keyframes animate-stripes {
+.primary.loading:not(.cancel) {
+  background-image: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 25%) 0%,
+    rgba(255, 255, 255, 25%) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 25%) 50%,
+    rgba(255, 255, 255, 25%) 75%,
+    transparent 75%,
+    transparent 100%
+  );
+}
+
+@keyframes animateStripes {
   0% {
     background-position: 0 0;
   }
