--- a/packages/components/src/Modal/Modal.css
+++ b/packages/components/src/Modal/Modal.css
@@ -1,11 +1,12 @@
-.container {
-  --modal-width: calc(var(--base-unit) * 37.5);
-  --modal-padding: var(--space-base) var(--space-large);
-  --modal-background-color: var(--color-white);
-  --header-background-color: var(--color-grey--lightest);
-  --border-color: var(--color-grey--lighter);
+:root {
+  --modal--width: calc(var(--base-unit) * 37.5);
+  --modal--padding: var(--space-base) var(--space-large);
+  --modal--border-color: var(--color-grey--lighter);
+}
 
+.container {
   display: flex;
+  flex-direction: column;
   z-index: var(--elevation-modal);
   padding: var(--space-base);
   overflow: auto;
@@ -27,21 +28,22 @@
 
 .modal {
   position: relative;
-  flex: 1 1 auto;
-  max-width: var(--modal-width);
+  flex: 0 0 auto;
+  width: 100%;
+  max-width: var(--modal--width);
   margin: auto;
-  border: var(--border-base) solid var(--border-color);
+  border: var(--border-base) solid var(--modal--border-color);
   border-radius: var(--radius-base);
   outline-color: var(--color-outline);
-  background-color: var(--modal-background-color);
+  background-color: var(--color-white);
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: var(--modal-padding);
-  background-color: var(--header-background-color);
+  padding: var(--modal--padding);
+  background-color: var(--color-grey--lightest);
 }
 
 .closeButton {
@@ -54,7 +56,7 @@
 
 .content,
 .actionBar {
-  padding: var(--modal-padding);
+  padding: var(--modal--padding);
 }
 
 .actionBar {
