--- a/packages/components/src/Tabs/Tabs.css
+++ b/packages/components/src/Tabs/Tabs.css
@@ -1,8 +1,13 @@
+:root {
+  --tab--border-color: var(--color-grey--lighter);
+  --tab--border-color--selected: var(--color-green);
+  --tab--height: calc(var(--space-larger) + var(--space-small));
+  --tab--inset: var(--space-base);
+}
+
 .tabs {
-  --border-color: var(--color-grey--lighter);
-  --border-color--selected: var(--color-green);
-  --tab-height: calc(var(--space-larger) + var(--space-small));
-  --inset: var(--space-base);
+  display: block;
+  width: 100%;
 }
 
 .tabRow {
@@ -11,30 +16,32 @@
 
 .tab {
   flex: 0 0 auto;
-  height: var(--tab-height);
+  height: var(--tab--height);
   margin: 0;
   margin-bottom: calc(-1 * var(--border-base));
-  padding-left: var(--inset);
-  padding-right: var(--inset);
-  border: solid var(--border-base) var(--border-color);
+  padding-left: var(--tab--inset);
+  padding-right: var(--tab--inset);
+  border: solid var(--border-base) var(--tab--border-color);
   border-right-width: 0;
   outline-color: var(--color-outline);
   background: none;
   cursor: pointer;
 }
+
 .tab:last-child {
   border-right-width: var(--border-base);
 }
+
 .tab:active {
   outline: 0;
 }
 
 .selected {
-  border-top-color: var(--border-color--selected);
+  border-top-color: var(--tab--border-color--selected);
   border-bottom-color: var(--color-white);
 }
 
 .tabContent {
   padding: var(--space-base);
-  border-top: solid var(--border-base) var(--border-color);
+  border-top: solid var(--border-base) var(--tab--border-color);
 }
