--- a/packages/components/src/FlashMessage/FlashMessage.css
+++ b/packages/components/src/FlashMessage/FlashMessage.css
@@ -1,27 +1,35 @@
+:root {
+  --flash--inset: var(--space-base);
+}
+
 .flash {
-  position: relative;
+  display: flex;
   margin-bottom: var(--space-base);
-  padding: var(--space-base);
-  border-top: var(--space-smaller) solid var(--color-grey--light);
+  padding: var(--flash--inset);
+  border-top: var(--border-thick) solid var(--color-grey--light);
   border-bottom-right-radius: var(--space-smaller);
   border-bottom-left-radius: var(--space-smaller);
   color: var(--color-black);
-  background-color: var(--color-greyLightest);
+  background-color: var(--color-grey--lightest);
+  align-items: center;
+}
+
+.flash > *:first-child {
+  flex: 1 1 auto;
 }
 
 .closeButton {
-  position: absolute;
-  top: 0px;
-  right: 0px;
+  width: var(--space-larger);
+  margin-top: calc(var(--space-smallest) - var(--flash--inset));
+  margin-right: calc(var(--space-smallest) - var(--flash--inset));
+  padding: var(--space-smallest);
   border: none;
   background-color: transparent;
   cursor: pointer;
   appearance: none;
+  flex: 0;
 }
 
-.message {
-  /* Move into .flash?? */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.closeButton:focus {
+  outline: none;
 }
