--- a/packages/components/src/Menu/Menu.css
+++ b/packages/components/src/Menu/Menu.css
@@ -9,16 +9,24 @@
 
 .menu {
   position: absolute;
-  top: 100%;
   right: 0;
   z-index: var(--elevation-menu);
   width: calc(var(--base-unit) * 12.5);
   box-shadow: var(--shadow-base);
-  margin-top: var(--space-smallest);
   padding: var(--space-small);
   border: var(--border-base) solid var(--color-grey--lighter);
   border-radius: var(--radius-base);
   background-color: var(--color-white);
+}
+
+.above {
+  bottom: 100%;
+  margin-bottom: var(--space-smallest);
+}
+
+.below {
+  top: 100%;
+  margin-top: var(--space-smallest);
 }
 
 .section {
@@ -67,4 +75,5 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: var(--elevation-menu);
 }
