scroll long menus

--- a/packages/components/src/Menu/Menu.css
+++ b/packages/components/src/Menu/Menu.css
@@ -12,10 +12,12 @@
   right: 0;
   z-index: var(--elevation-menu);
   width: calc(var(--base-unit) * 12.5);
+  max-height: 300px;
   box-shadow: var(--shadow-base);
   padding: var(--space-small);
   border: var(--border-base) solid var(--color-grey--lighter);
   border-radius: var(--radius-base);
+  overflow: auto;
   background-color: var(--color-white);
 }
 
