add yellow dark text color

--- a/packages/components/src/Typography/css/TextColors.css
+++ b/packages/components/src/Typography/css/TextColors.css
@@ -26,6 +26,10 @@
   color: var(--color-yellow);
 }
 
+.yellowDark {
+  color: var(--color-yellow--dark);
+}
+
 .lightBlue {
   color: var(--color-lightBlue);
 }
