better prop and type name

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -182,6 +182,6 @@ select.formField {
   transform: translateY(-50%);
 }
 
-.validationMessage {
+.hasValidationMessage {
   margin-bottom: var(--space-smaller);
 }
