--- a/packages/components/src/Tabs/Tabs.css
+++ b/packages/components/src/Tabs/Tabs.css
@@ -48,7 +48,7 @@
   padding-left: var(--tab--inset);
   padding-right: var(--tab--inset);
   border: solid var(--border-base) var(--tab--border-color);
-  border-right-width: 0;
+  border-left-width: 0;
   outline: none;
   background: transparent;
   cursor: pointer;
@@ -58,10 +58,6 @@
 .tab:hover,
 .tab:focus {
   background-color: var(--color-yellow--lightest);
-}
-
-.tab:last-child {
-  border-right-width: var(--border-base);
 }
 
 .selected {
