--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -49,7 +49,8 @@
   appearance: none;
 }
 
-.formField::-ms-clear {
+.formField::-ms-clear,
+.formField::-webkit-clear-button {
   display: none;
 }
 
