first pass on input group

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -11,12 +11,14 @@
   --field--padding-left: var(--space-base);
   --field--padding-right: var(--space-base);
   --field--height: var(--space-largest);
+
+  --field--wrapper-elevation: auto;
 }
 
 .wrapper {
   position: relative;
+  z-index: var(--field--wrapper-elevation);
   width: 100%;
-  margin-bottom: var(--space-base);
   background-color: var(--field--background-color);
 }
 
@@ -66,6 +68,7 @@ select.formField {
 
 .formField:focus {
   --field--border-color: var(--color-outline);
+  --field--wrapper-elevation: var(--elevation-base);
 }
 
 .label {
@@ -123,6 +126,7 @@ select.formField {
 .invalid,
 .invalid .formField:focus {
   --field--border-color: var(--color-red);
+  --field--wrapper-elevation: var(--elevation-base);
 }
 
 .hasErrorMessage {
