content aware content padding

--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -8,6 +8,8 @@
 }
 
 .card {
+  --public-content--padding: var(--card--base-padding);
+
   display: block;
   width: 100%;
   border: var(--border-base) solid var(--card--border-color);
