update public tab inset because i forgot

--- a/packages/components/src/Modal/Modal.css
+++ b/packages/components/src/Modal/Modal.css
@@ -6,6 +6,7 @@
 
 .container {
   --public-content--padding: var(--modal--padding);
+  --public-tab--inset: var(--space-large);
 
   display: flex;
   flex-direction: column;
