--- a/packages/components/src/Tooltip/Tooltip.css
+++ b/packages/components/src/Tooltip/Tooltip.css
@@ -6,11 +6,23 @@
   display: inline-block;
   position: absolute;
   width: calc(var(--base-unit) * 15); /* 240 */
-  padding: 14px; /*make this relative*/
+  padding: 8px; /*make this relative*/
   border: 1px solid var(--color-lightBlue);
   border-radius: 2px; /*make this relative*/
   text-align: center;
   background-color: var(--color-lightBlue--lightest);
+}
+
+.tooltip:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  width: var(--space-base);
+  height: var(--space-base);
+  border: 1px solid var(--color-lightBlue);
+  background-color: inherit;
+  transform: translateX(-50%) rotate(45deg);
 }
 
 .above,
@@ -21,8 +33,20 @@
 
 .above {
   bottom: 100%;
+  margin-bottom: var(--space-base);
+}
+
+.above:after {
+  bottom: -9px;
+  border-width: 0 1px 1px 0;
 }
 
 .below {
   top: 100%;
+  margin-top: var(--space-base);
+}
+
+.below:after {
+  top: -9px;
+  border-width: 1px 0 0 1px;
 }
